[project]
name = "plex-library-watch-history"
version = "0.1.0"
description = "Show stale and unwatched items in plex from tautulli and seerr"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pydantic-settings>=2.14.2",
    "requests>=2.34.2",
    "rich>=15.0.0",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
    "pytest-mock>=3.15.1",
    "responses>=0.26.2",
]

[tool.pytest.ini_options]
addopts = "--cov=. --cov-report=term-missing"
testpaths = ["tests"]
pythonpath = ["."]

[tool.coverage.run]
source = ["."]
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
    "if __name__ == .__main__.:",
]
